# 2019_Python_Coverage_Template

./: README.md  requirements.txt  setup.cfg  setup.py
src/widgets/widget_00/: widget_00.py
src/widgets/widget_01/: widget_01.py
src/widgets/widget_02/: widget_02.py
test/: test_widgets.py
