# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = ForCity_Test_Widgets_Coverage
version = 0.1
author = ATTY Lionel
author-email = lionel.atty@forcity.com
home-page =
description =
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = COPYING
platform = any
keywords =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = == 2.7.*
packages =
test_suite = test
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
tests_require =
    pytest
    simplejson

[options.extras_require]
dev =
	docutils
	Pygments
test =
	pytest
	coverage
ci =
    # codacy-coverage
    # codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[tool:pytest]
testpaths = test
python_files = test_*.py
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
addopts =
    -ra
    --strict
    --tb=short
    -p pytester

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[isort]
force_single_line=True
line_length=120
known_first_party=pytest_cov
default_section=THIRDPARTY
forced_separate=test_pytest_cov